# xpwn-modern-buid

./: .gitignore  .gitmodules  CMakeLists.txt  FindUSB.cmake  README.markdown
cmake/: FindZLIBNG.cmake
common/: CMakeLists.txt
crypto/: aes.c
dfu-util/: CMakeLists.txt  dfu.c  dfu.h  main.c  sam7dfu.c
dmg/: CMakeLists.txt  dmgfile.c  dmglib.c  filevault.c  io.c
hdutil/: CMakeLists.txt
hfs/: CMakeLists.txt  catalog.c  hfs.c  hfscompress.c  hfslib.c
idevice/: idevice.c
includes/dmg/: dmg.h
includes/hfs/: hfslib.h
includes/xpwn/: plist.h  pwnutil.h
ipsw-patch/: CMakeLists.txt  ibootim.c  imagetool.c  img3.c  main.c  outputstate.c  plist.c  pwnutil.c  validate.c  xpwntool.c
ipsw-patch/FirmwareBundles/Down_iPhone3,1_7.1.2_11D257.bundle/: Info.plist
ipsw-patch/FirmwareBundles/Down_iPhone4,1_5.1.1_9B206.bundle/: iBEC.n94ap.RELEASE.patch
ipsw-patch/FirmwareBundles/Down_iPhone5,2_6.1.2_10B146.bundle/: iBEC.n42ap.RELEASE.patch
ipsw-patch/FirmwareBundles/Down_iPhone5,2_9.1_13B143.bundle/: iBEC.n42ap.RELEASE.patch
ipsw-patch/FirmwareBundles/Down_iPhone5,2_9.2_13C75.bundle/: iBEC.n42ap.RELEASE.patch
ipsw-patch/FirmwareBundles/Down_iPhone5,2_9.3.2_13F69.bundle/: iBEC.n42ap.RELEASE.patch
ipsw-patch/FirmwareBundles/Down_iPhone5,2_9.3.4_13G35.bundle/: iBEC.n42ap.RELEASE.patch
ipsw-patch/FirmwareBundles/Down_iPhone5,2_9.3.5_13G36.bundle/: iBEC.n42ap.RELEASE.patch
ipsw-patch/FirmwareBundles/Down_iPhone5,2_9.3_13E237.bundle/: iBEC.n42ap.RELEASE.patch
ipsw-patch/FirmwareBundles/NO_BB_iPhone3,1_7.0.4_11B554a.bundle/: Info.plist
ipsw-patch/FirmwareBundles/NO_BB_iPhone3,1_7.1.2_11D257.bundle/: Info.plist
minizip/: CMakeLists.txt  unzip.c  zip.c
